--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,6 @@ header nav ul{
     padding: 0 50px 30px 0;
 }
 
-header nav ul li {
-    
-}
 header nav ul li a {
     color: lightseagreen;
     text-decoration: none;
@@ -58,14 +55,15 @@ header nav ul li a {
     margin-top: 10px;
     border: 1px solid lightseagreen;
 }
-.flex-container {
+article {
     display: flex;
     flex-direction: row;
-    width: 100%;
 }
 .info {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
 }
 .info content {
     width: 30%;
