--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,19 +102,6 @@ article {
 
 /* Work Image Section */
 
-.main-image {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    background-image: url(../images/run-buddyimg.png);
-    background-position: center;
-    background-size: cover;
-    height: 200px;
-    width: 1024px;
-    margin-left: 40px;
-    border: 3px solid lightseagreen;
-
-}
 .main-image:hover {
     opacity: 50%;
 }
@@ -122,10 +109,39 @@ article {
     display: flex;
     background-color: lightseagreen;
     width: 10%;
+    
 }
 .main-image h4 {
     display: flex;
     background-color: lightseagreen;
     width: 10%;
-    margin-bottom: 10px;
+}
+.main-anchor {
+    
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    background-image: url(../images/run-buddyimg.png);
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+    width: 1200px;
+    margin-left: 40px;
+    border: 3px solid lightseagreen;
+}
+.horiseon-image {
+    display: flex;
+    flex-wrap: wrap;
+    background-image: url(../images/horiseon.png);
+    background-position: center;
+    background-size: cover;
+    height: 100px;
+    width: 500px;
+}
+#Work {
+    display: flex;
+    flex-direction: column;
+}
+#work section {
+    
 }
