--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,9 +89,7 @@ body {
     padding-left: 40px;
     
 }
-.info img:hover {
-    opacity: 50%;
-}
+
 article {
     display: flex;
     flex-direction: row;
@@ -101,52 +99,93 @@ article {
 }
 
 /* Work Image Section */
+div {
+    display: flex;
+    flex-direction: column;
+}
+    /* Main Work Image */
 
+.main-image {
+    display: flex;
+    margin-bottom: 10px;
 
+}
 .main-anchor:hover {
     opacity: 50%;
 }
-.main-image h3 {
-    display: flex;
-    background-color: lightseagreen;
-    width: 10%;
-    
+
+h4 {
+    font-size: 10px;
 }
-.main-image h4 {
-    display: flex;
-    background-color: lightseagreen;
-    width: 10%;
-}
-.main-anchor {
-    
-    text-decoration: none;
-    list-style: none;
+
+/* All work images */
+.work-images {
     display: flex;
     flex-direction: column;
-    background-image: url(../images/run-buddyimg.png);
+    justify-content: center;
+
     background-position: center;
     background-size: cover;
-    height: 400px;
-    width: 1200px;
-    margin-left: 40px;
+    width: 100%;
+    height: 100px;
+
     border: 3px solid lightseagreen;
     color: #1c1c1c;
 }
-.horiseon-image {
-    display: flex;
-    flex-wrap: wrap;
-    background-image: url(../images/horiseon.png);
-    background-position: center;
-    background-size: cover;
-    height: 100px;
-    width: 500px;
+
+/* Work Image ID's */
+#run-buddy {
+    background-image: url(../images/run-buddyimg.png);
+    height: 400px;
+    margin-top: 28px;
+    justify-content: flex-end;
 }
-/* #Work {
+#horiseon-img-id {
+    background-image: url(../images/horiseon.png);
+}
+#youtube-id {
+    background-image: url(../images/youtube-logo-0.jpg);
+    margin-left: 20px;
+}
+#google-id {
+    background-image: url(../images/google\ background\ wallpapers8.png);
+}
+#amazon-id {
+    background-image: url(../images/140813-amazon-logo-905.jpg);
+    margin-left: 20px;
+}
+    /* Secondary Image */
+.secondary-images {
+    display: flex;
+    flex-direction: row;
+    margin-top: 25px;
+    justify-content: space-between;
+}
+.secondary-images div {
+    justify-content: center;
+    
+}
+#run-buddy div {
+    margin-bottom: 10px;
+}
+.textbox {
+    display: inline-block;
+    background-color: lightseagreen;
+    width: fit-content;
+}
+
+#Work section {
     display: flex;
     flex-direction: column;
-} */
+    margin-left: 40px;
+    width: 60%;
+}
+#Work a:hover {
+    opacity: 50%;
+}
  
 /* Link Section */
+
 
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
