--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,3 +191,13 @@ a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:active { text-decoration: none;}
+
+/* Contact Me Section */
+#Contact-Me ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20%;
+}
