--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -8,25 +9,24 @@
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
+    align-items: center;
     background-color: #1c1c1c;
     color: lightseagreen;
     margin: auto;
-    width: 100%;
 }
 header h1 {
     color: #1c1c1c;
     background-color: lightseagreen;
     text-align: center;
-    width: 20%;
-    text-align: right;
     font-size: 32px;
     margin: 20px 0 ;
 
 }
 header nav {
     background-color: #1c1c1c;
+    display: flex;
+    flex-wrap: wrap;
 }
 header nav ul{
     display: flex;
@@ -50,8 +50,8 @@ body {
 /* Hero starts */
 .hero {
     background-image: url("../images/150666-lines-background-1920x1200-for-phone.jpg");
-    width: 100%;
-    height: 200px;
+    /* width: 100%;
+    height: 100%; */
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
@@ -95,7 +95,6 @@ article {
     flex-direction: row;
     margin-top: 15px;
     margin-bottom: 15px;
-    width: 100%;
 }
 
 /* Work Image Section */
@@ -183,7 +182,19 @@ h4 {
 #Work a:hover {
     opacity: 50%;
 }
- 
+
+/* Contact Me Section */
+#Contact-Me ul {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    justify-content: center;
+}
+#Contact-Me ul li {
+    margin-left: 20%;
+    color: lightseagreen;
+}
+
 /* Link Section */
 
 
@@ -192,12 +203,43 @@ a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:active { text-decoration: none;}
 
-/* Contact Me Section */
-#Contact-Me ul {
+
+/* Media Query for Mobile */
+@media screen and (min-width: 300px) {
+header {
     display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    margin-left: 20%;
+    padding-bottom: 10px;
+}
+header h1 {
+    text-align: center;
+}
+header nav ul {
+    display: flex;
+}
+.hero content {
+    display: flex;
+    justify-content: center;
+}
+.hero img {
+    margin-bottom: 10px;
+}
+article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.info {
+    min-width: none;
+    max-width: none;
+}
+.info h2 {
+    border-bottom: 3px solid #1c1c1c;
+    border-right: 0;
+}
+#Work section {
+    display: flex;
+    flex-direction: column;
+}
 }
