added Eazy Eatz project to portfolio, relinked assets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h4 {
     background-image: url(../images/horiseon.png);
 }
 #youtube-id {
-    background-image: url(../images/youtube-logo-0.jpg);
+    background-image: url(../../../../../Group-Project-1/assets/images/Screenshot.png);
     margin-left: 20px;
 }
 #google-id {
