--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,12 +142,12 @@ h4 {
 #horiseon-img-id {
     background-image: url(../images/horiseon.png);
 }
-#youtube-id {
-    background-image: url(../../../../../Group-Project-1/assets/images/Screenshot.png);
+#eazyeatz {
+    background-image: url(../images/Screenshot\ 2021-11-21\ 173739.png);
     margin-left: 20px;
 }
-#google-id {
-    background-image: url(../images/google\ background\ wallpapers8.png);
+#purpleminutes {
+    background-image: url(../images/dev\ front\ 14.jpg);
 }
 #amazon-id {
     background-image: url(../images/140813-amazon-logo-905.jpg);
@@ -188,12 +188,24 @@ h4 {
     display: flex;
     list-style-type: none;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
-#Contact-Me ul li {
-    margin-left: 20%;
-    color: lightseagreen;
+
+.contact-info {
+    width: 100%;
 }
+
+.contact-links {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.contact-links a {
+    /* padding-right: 15px;
+    padding-left: 10%; */
+}
+
 
 /* Link Section */
 
