added updated image for Crockett Printing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ h4 {
     background-image: url(../images/dev\ front\ 14.jpg);
 }
 #amazon-id {
-    background-image: url(../images/140813-amazon-logo-905.jpg);
+    background-image: url(../images/Screenshot\ 2022-01-20\ 183508.png);
     margin-left: 20px;
 }
     /* Secondary Image */
